# mcp-lint

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mcp_lint/: cli.py  client.py  models.py  report.py  runner.py  scorer.py
src/mcp_lint/rules/: __init__.py  base.py  performance.py  protocol.py  schema.py  security.py
tests/: conftest.py  test_cli.py  test_report.py  test_scorer.py
tests/test_rules/: test_performance.py  test_protocol.py  test_schema.py  test_security.py
