[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-lint"
version = "0.1.0"
description = "A production-quality linter for MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Luxshan Thavarasa", email = "luxshanlux2000@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "lint",
    "linter",
    "static-analysis",
    "cli",
    "ai-tools",
    "llm",
    "protocol-validation",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.26.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jsonschema>=4.20.0",
]

[project.urls]
Homepage = "https://github.com/Luxshan2000/mcp-lint"
Repository = "https://github.com/Luxshan2000/mcp-lint"
Issues = "https://github.com/Luxshan2000/mcp-lint/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
mcp-lint = "mcp_lint.cli:app_main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_lint"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
